# fde-for-a-day

./: .gitignore  .pre-commit-config.yaml  README.md
.agents/skills/ci-check/: SKILL.md
.claude/skills/ci-check/: SKILL.md
.github/instructions/: documentation.instructions.md  py_bestpractice.instructions.md  py_fastapi.instructions.md  py_models.instructions.md  py_testing.instructions.md  ts_bestpractice.instructions.md
docs/: architecture.md  evals.md  methodology.md
docs/challenge/: README.md
docs/challenge/task1/: README.md  customer_brief.md  (+2 more)
docs/eval/: README.md  fdebench.md
infra/: README.md
infra/app/: Pulumi.msfde.yaml  __main__.py  pyproject.toml
py/: .dockerignore  Makefile
py/apps/sample/: .env.example  Dockerfile  llm_client.py  main.py  models.py  prompt_loading.py  pyproject.toml  rate_limiter.py  settings.py  text_utils.py  web.py
py/apps/sample/extract/: __init__.py  extractor.py  images.py  normalize.py  prompt.py  prompt.yaml  schema.py
py/apps/sample/orchestrate/: __init__.py  executor.py  prompt.py  prompt.yaml  schema.py  tool_client.py
py/apps/sample/tests/: conftest.py  test_api_resilience.py  test_classifier.py  test_extract_endpoint.py  test_extract_schema.py  test_extractor.py  test_guardrails.py  test_llm_client.py  test_normalize.py  test_orchestrate_endpoint.py  test_orchestrate_executor.py  test_orchestrate_schema.py  test_orchestrate_tool_client.py  test_rate_limiter.py  test_triage_endpoint.py
py/apps/sample/triage/: __init__.py  classifier.py  guardrails.py  prompt.py  prompt.yaml
py/data/: README.md
(+19 files in other folders)
