[project]
name = "sample"
version = "0.0.0"
description = "FDEBench starter: stub endpoints for all 3 tasks"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "email-validator>=2.0.0",
    "openai>=2.0.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.1",
    "azure-identity>=1.21.0",
    "aiohttp>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
extraPaths = [
    "../../common/libs/models/src",
    "../../common/libs/fastapi/src",
    "../../common/libs/fdebenchkit/src",
]
